components/LanguagePicker/LanguagePicker.scss
@import '../Global/Global.scss';

.language-picker {
    a {
        font-size: 0.9em;
        display: flex;
        padding: 0.5rem 1rem;

        align-items: center;
        justify-content: center;
        color: var(--white);

        &:hover {
            color: var(--black);
            text-decoration: none;
            background: var(--grey-light);
        }
        img {
            width: 20px;
            margin-right: 1rem;
        }
    }
    @include size('tablet') {
        position: absolute;
        top: -90px;
        right: 0;

        display: flex;
        flex-direction: column;
        padding: 0;
        overflow: hidden;
        height: 2.3rem;
        background: var(--white);
        transition: height 0.2s ease-in-out;
        border-radius: 5px;

        &:hover {
            height: 6.9rem;
            box-shadow: 0px 0px 5px 5px var(--grey-light);
        }

        a {
            align-items: unset;
            justify-content: unset;
            color: var(--black);
        }

        p {
            padding: 0;
            margin: 0;
        }
    }
}

